--- a/src/component/SideBar/sidebar.css
+++ b/src/component/SideBar/sidebar.css
@@ -23,3 +23,7 @@
     height: 100vh !important;
     background-color: rgb(114, 120, 204) !important;
   }
+  .ant-menu-item-selected{
+background-color: rgb(5, 5, 5) !important;
+
+  }
