--- a/src/screens/Login/login.css
+++ b/src/screens/Login/login.css
@@ -75,3 +75,23 @@
     background: #428c8a;
   }
 } */
+.loader-bg {
+  background-color:rgba(0, 0, 0, 0.5)  !important;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+}
+.loader {
+  position: absolute ;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%,-50%);
+}
+.hide {
+  display: none;
+}
