--- a/src/component/SideBar/sidebar.css
+++ b/src/component/SideBar/sidebar.css
@@ -24,7 +24,7 @@
     background-color: rgb(114, 120, 204) !important;
   }
   .ant-menu-item-selected{
-background-color: rgb(5, 5, 5) !important;
+background-color: #d9d9d9a1 !important;
 
   }
   .route-link{
