--- a/src/screens/Auction Management/Auction Detail/detail.css
+++ b/src/screens/Auction Management/Auction Detail/detail.css
@@ -41,3 +41,16 @@
   max-height: 100%;
 object-fit: contain;
 }
+.ant-input-number {
+width: -webkit-fill-available;
+}
+
+.ant-input-number-handler-wrap{
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .gr-mb-2 {
+        margin-bottom: 10px !important
+    }
+}
