--- a/src/screens/Auction Management/Auction Detail/detail.css
+++ b/src/screens/Auction Management/Auction Detail/detail.css
@@ -17,9 +17,6 @@
     width: 100% !important;
 }  */
 
-.testImg{
-    background-image: url('../../../assets/1.png');
-}
 
 .img-stl {
     object-fit: contain !important;
@@ -62,8 +59,22 @@ width: -webkit-fill-available;
 }
 
 .add-component {
-    border: 1px ridge #4919b9;
+    border: 2px ridge #4919b9;
     background-color: rgb(251, 251, 253);
     margin-bottom: 20px;
-    padding: 10px;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+/* ant-select ant-select-single  */
+.ant-select-show-arrow{
+    width: -webkit-fill-available;
+}
+
+.ant-input[disabled]{
+    background-color: #fff;
+}
+
+.ant-picker-input > input[disabled]{
+    background-color: #fff;
 }
