--- a/src/screens/Auction Management/Auction Detail/detail.css
+++ b/src/screens/Auction Management/Auction Detail/detail.css
@@ -78,3 +78,7 @@ width: -webkit-fill-available;
 .ant-picker-input > input[disabled]{
     background-color: #fff;
 }
+
+.ant-picker.ant-picker-disabled{
+    background-color: #fff;
+}
